[gd_scene load_steps=6 format=3 uid="uid://bjit64u16pfp8"]

[ext_resource type="Texture2D" uid="uid://ce0ph1n2p5qit" path="res://ShuttleView/Assets/spark.png" id="1"]
[ext_resource type="Script" path="res://ShuttleView/DockSparks.gd" id="2"]

[sub_resource type="Gradient" id="Gradient_n1wv0"]
offsets = PackedFloat32Array(0, 0.95203)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6d1su"]
gradient = SubResource("Gradient_n1wv0")

[sub_resource type="ParticleProcessMaterial" id="6"]
lifetime_randomness = 0.5
particle_flag_rotate_y = true
particle_flag_disable_z = true
spread = 5.0
initial_velocity_min = 200.0
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
scale_min = 0.35
scale_max = 0.45
color_ramp = SubResource("GradientTexture1D_6d1su")

[node name="GPUParticles2D" type="GPUParticles2D"]
position = Vector2(-55, 28)
emitting = false
amount = 100
process_material = SubResource("6")
texture = ExtResource("1")
lifetime = 0.3
script = ExtResource("2")

[node name="ParticleWaitTimer" type="Timer" parent="."]
one_shot = true

[node name="ParticleTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="ParticleWaitTimer" to="." method="_on_ParticleWaitTimer_timeout"]
[connection signal="timeout" from="ParticleTimer" to="." method="_on_ParticleTimer_timeout"]
